CMS-2321: Fixed APL Default Template Name

--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -12,4 +12,5 @@ SKU,SKU
 Status,Status
 Stores,Stores
 "content_product_abstract_list.template.default","Standard"
+"content_product_abstract_list.template.bottom-title","Titel unten"
 "content_product_abstract_list.template.top-title","Titel oben"
